// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App/> component should render correctly 1`] = `
<div
  className="app"
  data-theme="test-theme"
>
  <HashRouter
    basename="/"
  >
    <Header />
    <main
      className="appContent"
    >
      <Route
        component={[Function]}
        exact={true}
        path="/"
      />
      <Route
        component={[Function]}
        path="/about"
      />
    </main>
    <Footer />
    <CookieDisclaimer />
  </HashRouter>
</div>
`;

exports[`<App/> component when the theme is dark should render correctly 1`] = `
<div
  className="app app__dark"
  data-theme="DARK_THEME"
>
  <HashRouter
    basename="/"
  >
    <Header />
    <main
      className="appContent appContent__dark"
    >
      <Route
        component={[Function]}
        exact={true}
        path="/"
      />
      <Route
        component={[Function]}
        path="/about"
      />
    </main>
    <Footer />
    <CookieDisclaimer />
  </HashRouter>
</div>
`;
